# imap-to-gmail-sync

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
docs/: oauth_bootstrap_example.py
imap_to_gmail_sync/: __init__.py  cli.py  core.py
tests/: test_core.py
