[project]
name = "imap-to-gmail-sync"
version = "0.2.0"
description = "Incrementally sync mail from any IMAP mailbox into Gmail via the Gmail API — a replacement for Gmail's deprecated POP \"check mail from other accounts\"."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["imap", "gmail", "email", "sync", "pop3", "migration", "self-hosted", "mailcow"]
dependencies = [
    "httpx>=0.27",
]

[project.scripts]
imap-to-gmail-sync = "imap_to_gmail_sync.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["imap_to_gmail_sync"]
